--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Alert Example</title>
+</head>
 <body>
-  hello this is my first website
+    <script>
+        // JavaScript code to display an alert
+        alert("This is an alert!");
+    </script>
 </body>
+</html>
+
